@@ -1,3 +1,60 @@
+//package com.example.Sync.config;
+//
+//import com.example.Sync.util.JwtUtil;
+//import jakarta.servlet.*;
+//import jakarta.servlet.http.*;
+//import lombok.RequiredArgsConstructor;
+//import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+//import org.springframework.security.core.context.SecurityContextHolder;
+//import org.springframework.stereotype.Component;
+//import org.springframework.web.filter.OncePerRequestFilter;
+//import java.io.IOException;
+//import java.util.Collections;
+//
+//@Component
+//@RequiredArgsConstructor
+//public class JwtAuthenticationFilter extends OncePerRequestFilter {
+//
+//    private final JwtUtil jwtUtil;
+//
+//    @Override
+//    protected void doFilterInternal(HttpServletRequest request,
+//                                    HttpServletResponse response,
+//                                    FilterChain filterChain)
+//            throws ServletException, IOException {
+//
+//        String header = request.getHeader("Authorization");
+//
+//        if (header != null && header.startsWith("Bearer ")) {
+//            String token = header.substring(7);
+//
+//            if (!jwtUtil.validateToken(token)) {
+//                response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+//                return;
+//            }
+//
+//
+//            // ✅ Set authentication in SecurityContext
+//            String email = jwtUtil.getEmailFromToken(token);
+//            UsernamePasswordAuthenticationToken authentication =
+//                    new UsernamePasswordAuthenticationToken(
+//                            email,
+//                            null,
+//                            Collections.emptyList()
+//
+//            // ✅ YE MISSING THA — Security context mein set karo
+//            String email = jwtUtil.getEmailFromToken(token);
+//            UsernamePasswordAuthenticationToken authentication
+//                    new UsernamePasswordAuthenticationToken(
+//                            email, null, Collections.emptyList());
+//            SecurityContextHolder.getContext().setAuthentication(authentication);
+//        }
+//
+//        filterChain.doFilter(request, response);
+//    }
+//}
+
+
 package com.example.Sync.config;
 
 import com.example.Sync.util.JwtUtil;
@@ -5,11 +62,14 @@ import jakarta.servlet.*;
 import jakarta.servlet.http.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
+
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -33,15 +93,24 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                 return;
             }
 
-            // ✅ Set authentication in SecurityContext
-            String email = jwtUtil.getEmailFromToken(token);
-            UsernamePasswordAuthenticationToken authentication =
-                    new UsernamePasswordAuthenticationToken(
-                            email,
-                            null,
-                            Collections.emptyList()
-                    );
-            SecurityContextHolder.getContext().setAuthentication(authentication);
+            // ✅ Extract email/username from token
+            String email = jwtUtil.extractUsername(token);
+
+            // ✅ Set authentication in SecurityContext so Spring knows who this is
+            if (email != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+                UsernamePasswordAuthenticationToken authentication =
+                        new UsernamePasswordAuthenticationToken(
+                                email,
+                                null,
+                                List.of(new SimpleGrantedAuthority("ROLE_USER")) // or extract from token
+                        );
+
+                authentication.setDetails(
+                        new WebAuthenticationDetailsSource().buildDetails(request)
+                );
+
+                SecurityContextHolder.getContext().setAuthentication(authentication);
+            }
         }
 
         filterChain.doFilter(request, response);
